# jigandmpnn

./: .gitignore  README.md  main.py  pyproject.toml
benchmarks/: bench_jax.py  bench_torch.py
demos/: demo_jax.py  demo_torch.py
src/jigandmpnn/: __init__.py  backend.py
src/jigandmpnn/modules/: __init__.py  features.py  layers.py  model.py  utils.py
tests/: test_augment_eps.py  test_encode.py  test_features.py  test_layers.py  test_ligand_encode.py  test_sample.py  test_score.py  test_utils.py
