[project]
name = "jigandmpnn"
version = "0.1.0"
description = "JAX/Equinox translation of LigandMPNN"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "jax[cpu,cuda12]",
    "equinox",
    "torch",
    "numpy",
    "jaxtyping",
    "prody",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jigandmpnn"]

[tool.hatch.build.targets.wheel.force-include]
"src/jigandmpnn/weights" = "jigandmpnn/weights"
"src/jigandmpnn/vendor" = "jigandmpnn/vendor"

[tool.hatch.build.targets.sdist]
include = [
    "src/jigandmpnn",
    "tests",
    "demos",
    "README.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
